Implement map-reduce tree traversal (#7)